[gd_scene load_steps=8 format=2]

[ext_resource path="res://ImageAssets/characters/wlady.png" type="Texture" id=1]
[ext_resource path="res://CustomerSceneScripts/whitelady-cust.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 31, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 31, 0, 31, 36 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 23 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 9 )

[node name="Whitelady-enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["customers"]]

[node name="Sprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="KineCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer3" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
